--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -6,6 +6,109 @@
 @source '../**/*.js';
 
 @theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    --font-sans: 'Roboto', 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
+    
+    --color-primary: #af3737;
+    --color-white: #f1f1f1;
+
+    --shadow-default: 1px 1px 4px 4px #0000007e;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: var(--font-sans);
+}
+
+body, html {
+    min-width: 100%;
+    min-height: 100dvh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
+}
+
+/*Navbar section*/
+header {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h1 {
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+header nav ul {
+    display: flex;
+    gap: 2rem;
+}
+
+header nav ul.dropdown {
+    display: none;
+}
+
+header nav li {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+header nav li div {
+    display: flex;
+    position: relative;
+    width: 100%;
+}
+
+header nav li svg {
+    width: 20px;
+    transition: all 0.2s ease-in-out;
+    position: absolute;
+    left: 100%;
+}
+
+header nav li::after {
+    content: "";
+    transition: all 0.2s ease-in-out;
+    display: inline-block;
+    height: 2px;
+    width: 0%;
+    background-color: var(--color-white);
+}
+
+/*Hover effects*/
+header nav li:hover ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    position: absolute;
+    padding: 1rem;
+    top: 100%;
+    width: fit-content;
+    text-wrap: nowrap;
+    background-color: var(--color-primary);
+}
+
+header nav li:hover::after {
+    width: 100%;
+}
+
+header nav li:hover svg {
+    transform: rotate(90deg);
+}
+
+/*Footer section*/
+footer {
+    text-align: center;
+    padding: 1rem;
+    box-shadow: var(--shadow-default);
 }
