all auth pages done

--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -1,5 +1,8 @@
 @import 'tailwindcss';
 
+@import '../../vendor/livewire/flux/dist/flux.css';
+@custom-variant dark (&:where(.dark, .dark *));
+
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
@@ -12,4 +15,8 @@
 
 body, html {
     height: 100vh;
+}
+
+a:hover {
+    text-decoration: underline;
 }
